--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+      <ion-buttons slot="start">
+          <ion-back-button color="secondary"></ion-back-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
