--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,6 +3,7 @@
       <ion-buttons slot="start">
           <ion-back-button color="secondary"></ion-back-button>
       </ion-buttons>
+      <ion-title>No back button :(</ion-title>
   </ion-toolbar>
 </ion-header>
 
